Improve:copyright / commentout Fix:fixed member list overflow Update:member_list.json Create:ryoma.png

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<meta name="keywords" content="sarf">
 	<meta name="author" content="Rinrin.rs">
-	<meta name="copyright" content="© 2022 Sarf Esports All rights reserved">
+	<meta name="copyright" content="© 2022 Sarf Esports All rights reserved.">
 
 	<!-- ▲ Global head ▲ -->
 
@@ -34,7 +34,7 @@
 	<meta property="og:title" content="Sarf Esports">
 	<meta property="og:description" content="Sarf Esports の公式サイトです。">
 	<meta property="og:url" content=""> <!-- TODO: Input the URL of this page -->
-	<!-- website or article -->
+	<!-- ↓ website or article -->
 	<meta property="og:type" content="website">
 	<link rel="stylesheet" href="./assets/stylesheets/style.css">
 	<link rel="stylesheet" href="./assets/stylesheets/util.css">
@@ -280,6 +280,7 @@
 			position: relative;
 			top: -24px;
 			border: #090909 5px solid;
+			overflow: hidden;
 			transform-origin: top;
 		}
 
@@ -482,7 +483,7 @@
 
 	<footer>
 		<!-- TODO: Implement the footer -->
-		<p class="copyright">© 2022 Sarf Esports All rights reserved</p>
+		<p class="copyright">© 2022 Sarf Esports All rights reserved.</p>
 	</footer>
 
 	<a href="https://twitter.com/sarf_esports" target="_blank" title="Twitter (@sarf_esports)" id="twitter">
