Create:gaster.png / Improve:member list separator

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 			content: "";
 			display: block;
 			width: 100%;
-			border: 1px solid #dae7eb;
+			border: 1px solid #4a6072;
 			margin-bottom: 16px;
 		}
 
@@ -373,6 +373,7 @@
 </head>
 
 <body>
+	<!-- TODO: Implement the responsive design of the header. -->
 	<header>
 		<nav>
 			<ul>
