--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
 		function set_member_list(elem, member_list) {
 			for (let i = 0; i < member_list.length; i++) {
 				let m = member_list[i];
-				let icon = m.icon == null ? "" : `<img src="./assets/images/members/${m.icon}"" alt="member icon" class="member-icon">`;
+				let icon = m.icon == null ? "" : `<img src="./assets/images/members/${m.icon}"" alt="member icon" loading="lazy" class="member-icon">`;
 				let name = `<h2 class="member-name">${m.name}</h2>`;
 				let twitter = m.twitter == null ? "" : `
 					<a href="https://twitter.com/${m.twitter}" class="member-twitter member-link" target="_blank">
-					<img src="./assets/images/logos/twitter_blue.svg" alt="twitter logo">
+					<img src="./assets/images/logos/twitter-logo-01282021/Twitter logo/SVG/Logo blue.svg" alt="twitter logo" loading="lazy">
 					</a>
 				`;
 				let youtube = m.youtube == null ? "" : `
 					<a href="https://youtube.com/channel/${m.youtube}" class="member-youtube member-link" target="_blank">
-					<img src="./assets/images/logos/youtube.png" alt="youtube logo">
+					<img src="./assets/images/logos/youtube.png" alt="youtube logo" loading="lazy">
 					</a>
 				`;
 				let twitch = m.twitch == null ? "" : `
 					<a href="https://twitch.tv/${m.twitch}" class="member-twitch member-link" target="_blank">
-					<img src="./assets/images/logos/twitch.svg" alt="twitch logo">
+					<img src="./assets/images/logos/twitch.svg" alt="twitch logo" loading="lazy">
 					</a>
 				`;
 				let li = `<li>${icon}${name}${twitter}${youtube}${twitch}</li>`;
@@ -489,7 +489,7 @@
 
 	<a href="https://twitter.com/sarf_esports" target="_blank" title="Twitter (@sarf_esports)" id="twitter">
 		<div>
-			<img src="./assets/images/logos/twitter_white.svg" alt="twitter logo">
+			<img src="./assets/images/logos/twitter-logo-01282021/Twitter social icons/Twitter social icons - circle/Twitter social icons - circle - blue.svg" alt="twitter logo">
 		</div>
 	</a>
 
