Update:change sarf to revati

--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="format-detection" content="telephone=no">
 
-	<meta property="og:site_name" content="Sarf Esports">
+	<meta property="og:site_name" content="REVATI">
 	<!-- TODO: Input the absolute path of the favicon ↓↓-->
 	<meta property="og:image"
-		content="https://cdn.discordapp.com/attachments/1027540826697519115/1027668347158007929/sarf_large.png">
+		content="https://media.discordapp.net/attachments/851587574631628831/1043840269038129222/REVATI_LOGO_BLK_2.png">
 	<meta property="og:locale" content="ja_JP">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content=""> <!-- TODO: Input the link to index  -->
 	<meta name="theme-color" content="#83ebff">
 
-	<meta name="keywords" content="sarf">
+	<meta name="keywords" content="revati">
 	<meta name="author" content="Rinrin.rs">
-	<meta name="copyright" content="© 2022 Sarf Esports All rights reserved.">
+	<meta name="copyright" content="© 2022 REVATI">
 
 	<!-- ▲ Global head ▲ -->
 
 	<!-- ▼ Local head ▼ -->
 
-	<link rel="icon" href="./assets/images/logos/sarf.png">
-	<title>Sarf Esports</title>
-	<meta name="title" content="Sarf Esports">
-	<meta name="description" content="Sarf Esports の公式サイトです。">
+	<link rel="icon" href="./assets/images/logos/REVATI_LOGO_BLK_2.png">
+	<title>REVATI</title>
+	<meta name="title" content="REVATI">
+	<meta name="description" content="REVATI の公式サイトです。">
 
-	<meta property="og:title" content="Sarf Esports">
-	<meta property="og:description" content="Sarf Esports の公式サイトです。">
+	<meta property="og:title" content="REVATI">
+	<meta property="og:description" content="REVATI の公式サイトです。">
 	<meta property="og:url" content=""> <!-- TODO: Input the URL of this page -->
 	<!-- ↓ website or article -->
 	<meta property="og:type" content="website">
@@ -80,7 +80,7 @@
 				})
 				.catch(_ => {
 					// for local environment
-					fetch("https://rinrin0413.github.io/sarfesports-website.dev/assets/data/member_list.json")
+					fetch("https://sarf-esports.github.io/website/assets/data/member_list.json")
 						.then(response => response.json())
 						.then(data => {
 							set_member_list(document.getElementById("fortnite-member-list"), data.fortnite);
@@ -123,7 +123,7 @@
 			background-size: cover;
 		}
 
-		.continer {
+		.container {
 			width: 100%;
 		}
 
@@ -377,7 +377,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="#" class="has-img"><img src="./assets/images/logos/sarf.png" alt="logo"></a></li>
+				<li><a href="#" class="has-img"><img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo"></a></li>
 				<li><a href="#about">ABOUT</a></li>
 				<li><a href="#topics">TOPICS</a></li>
 				<li><a href="#member">MEMBER</a></li>
@@ -391,10 +391,10 @@
 		<div class="container bg-default">
 			<section style="margin-top:192px;">
 				<div style="max-width:384px;margin:0 auto;">
-					<img src="./assets/images/logos/sarf.png" alt="logo" class="no-pointer-events fade-in-bottom"
+					<img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo" class="no-pointer-events fade-in-bottom"
 						style="width:100%;height:100%;object-fit:cover;">
 				</div>
-				<h1 style="font-size:64px;">Sarf Esports</h1>
+				<h1 style="font-size:64px;">REVATI</h1>
 				<a href="#about" class="dropdown-btn">▼</a>
 			</section>
 		</div>
@@ -484,7 +484,7 @@
 
 	<footer>
 		<!-- TODO: Implement the footer -->
-		<p class="copyright">© 2022 Sarf Esports All rights reserved.</p>
+		<p class="copyright">© 2022 REVATI</p>
 	</footer>
 
 	<a href="https://twitter.com/sarf_esports" target="_blank" title="Twitter (@sarf_esports)" id="twitter">
