Update:meta links / theme color / logos / thumbnail Fix:distorted icon / anchor position Improve:header design

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 	<meta property="og:site_name" content="REVATI">
 	<!-- TODO: Input the absolute path of the favicon ↓↓-->
 	<meta property="og:image"
-		content="https://media.discordapp.net/attachments/851587574631628831/1043840269038129222/REVATI_LOGO_BLK_2.png">
+		content="https://media.discordapp.net/attachments/851587574631628831/1043884225079812166/IMG_7664.jpg">
 	<meta property="og:locale" content="ja_JP">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content=""> <!-- TODO: Input the link to index  -->
-	<meta name="theme-color" content="#83ebff">
+	<!-- TODO: Input the link to index ↓↓  -->
+	<meta name="twitter:site" content="https://sarf-esports.github.io/website">
+	<meta name="theme-color" content="#d1ff46">
 
 	<meta name="keywords" content="revati">
 	<meta name="author" content="Rinrin.rs">
@@ -26,14 +27,15 @@
 
 	<!-- ▼ Local head ▼ -->
 
-	<link rel="icon" href="./assets/images/logos/REVATI_LOGO_BLK_2.png">
+	<link rel="icon" href="./assets/images/logos/REVATI_LOGO_BLK_2_square.png">
 	<title>REVATI</title>
 	<meta name="title" content="REVATI">
 	<meta name="description" content="REVATI の公式サイトです。">
 
 	<meta property="og:title" content="REVATI">
 	<meta property="og:description" content="REVATI の公式サイトです。">
-	<meta property="og:url" content=""> <!-- TODO: Input the URL of this page -->
+	<!-- TODO: Input the URL of this page ↓↓ -->
+	<meta property="og:url" content="https://sarf-esports.github.io/website">
 	<!-- ↓ website or article -->
 	<meta property="og:type" content="website">
 	<link rel="stylesheet" href="./assets/stylesheets/style.css">
@@ -143,6 +145,9 @@
 		section {
 			max-width: 768px;
 			margin: 0 auto;
+			display: block;
+			padding-top: 64px;
+			margin-top: -64px;
 		}
 
 		.dropdown-btn {
@@ -199,7 +204,7 @@
 			text-align: left;
 			background-color: #101010;
 			padding: 12px 32px 4px 8px;
-			border-left: #83ebff 5px solid;
+			border-left: #d1ff46 5px solid;
 			margin: 7px;
 			border-radius: 0 4px 4px 0;
 		}
@@ -244,8 +249,8 @@
 		}
 
 		.game-title.active {
-			background-color: #bff4ff;
-			border: 6px solid #89cedb;
+			background-color: #e3ff8e;
+			border: 6px solid #a3bd56;
 		}
 
 		.game-title.active:hover {
@@ -376,8 +381,8 @@
 	<!-- TODO: Implement the responsive design of the header. -->
 	<header>
 		<nav>
+			<a href="#" class="has-img"><img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo"></a>
 			<ul>
-				<li><a href="#" class="has-img"><img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo"></a></li>
 				<li><a href="#about">ABOUT</a></li>
 				<li><a href="#topics">TOPICS</a></li>
 				<li><a href="#member">MEMBER</a></li>
