--- a/index.html
+++ b/index.html
@@ -383,11 +383,11 @@
 		<nav>
 			<a href="#" class="has-img"><img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo"></a>
 			<ul>
-				<li><a href="#about">ABOUT</a></li>
-				<li><a href="#topics">TOPICS</a></li>
-				<li><a href="#member">MEMBER</a></li>
-				<li><a href="#sponsor">SPONSOR</a></li>
-				<li><a href="javascript:show_contact_modal()">CONTACT</a></li>
+				<li><a href="#about" class="hd-about">ABOUT</a></li>
+				<li><a href="#topics" class="hd-topics">TOPICS</a></li>
+				<li><a href="#member" class="hd-member">MEMBER</a></li>
+				<li><a href="#sponsor" class="hd-sponsor">SPONSOR</a></li>
+				<li><a href="javascript:show_contact_modal()" class="hd-contact">CONTACT</a></li>
 			</ul>
 		</nav>
 	</header>
