Fix:fucked typos

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 		<div class="container bg-default">
 			<section id="member">
 				<div class="section-title">
-					<h1>MEMBER</h1>
+					<h1>MEMBERS</h1>
 				</div>
 				<div class="section-content">
 					<ul class="title-list">
@@ -459,7 +459,8 @@
 							<ul class="member-list hide" id="fortnite-member-list"></ul>
 						</li>
 						<li>
-							<button onclick="toggle_member_list(this)" type="button" class="game-title">APEX</button>
+							<button onclick="toggle_member_list(this)" type="button" 
+								class="game-title">APEX LEGENDS</button>
 							<ul class="member-list hide" id="apex-member-list"></ul>
 						</li>
 						<li>
