Improve:use id for header sections / fmt / hover animation of the logo in header / refactored header animation implementations

--- a/index.html
+++ b/index.html
@@ -383,11 +383,11 @@
 		<nav>
 			<a href="#" class="has-img"><img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo"></a>
 			<ul>
-				<li><a href="#about" class="hd-about">ABOUT</a></li>
-				<li><a href="#topics" class="hd-topics">TOPICS</a></li>
-				<li><a href="#member" class="hd-member">MEMBER</a></li>
-				<li><a href="#sponsor" class="hd-sponsor">SPONSOR</a></li>
-				<li><a href="javascript:show_contact_modal()" class="hd-contact">CONTACT</a></li>
+				<li><a href="#about" id="hd-about">ABOUT</a></li>
+				<li><a href="#topics" id="hd-topics">TOPICS</a></li>
+				<li><a href="#member" id="hd-member">MEMBER</a></li>
+				<li><a href="#sponsor" id="hd-sponsor">SPONSOR</a></li>
+				<li><a href="javascript:show_contact_modal()" id="hd-contact">CONTACT</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -396,8 +396,8 @@
 		<div class="container bg-default">
 			<section style="margin-top:192px;">
 				<div style="max-width:384px;margin:0 auto;">
-					<img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo" class="no-pointer-events fade-in-bottom"
-						style="width:100%;height:100%;object-fit:cover;">
+					<img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo"
+						class="no-pointer-events fade-in-bottom" style="width:100%;height:100%;object-fit:cover;">
 				</div>
 				<h1 style="font-size:64px;">REVATI</h1>
 				<a href="#about" class="dropdown-btn">▼</a>
@@ -459,8 +459,9 @@
 							<ul class="member-list hide" id="fortnite-member-list"></ul>
 						</li>
 						<li>
-							<button onclick="toggle_member_list(this)" type="button" 
-								class="game-title">APEX LEGENDS</button>
+							<button onclick="toggle_member_list(this)" type="button" class="game-title">
+								APEX LEGENDS
+							</button>
 							<ul class="member-list hide" id="apex-member-list"></ul>
 						</li>
 						<li>
@@ -495,7 +496,8 @@
 
 	<a href="https://twitter.com/sarf_esports" target="_blank" title="Twitter (@sarf_esports)" id="twitter">
 		<div>
-			<img src="./assets/images/logos/twitter-logo-01282021/Twitter social icons/Twitter social icons - circle/Twitter social icons - circle - blue.svg" alt="twitter logo">
+			<img src="./assets/images/logos/twitter-logo-01282021/Twitter social icons/Twitter social icons - circle/Twitter social icons - circle - blue.svg"
+				alt="twitter logo">
 		</div>
 	</a>
 
