Improve:refactored contact modal impl

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 				<li><a href="#topics" id="hd-topics">TOPICS</a></li>
 				<li><a href="#member" id="hd-member">MEMBER</a></li>
 				<li><a href="#sponsor" id="hd-sponsor">SPONSOR</a></li>
-				<li><a href="javascript:show_contact_modal()" id="hd-contact">CONTACT</a></li>
+				<li><a href="javascript:toggle_contact_modal()" id="hd-contact">CONTACT</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -519,7 +519,7 @@
 
 	<div id="contact-modal" class="hide-contact-modal">
 		<h1>- CONTACT US -</h1>
-		<span class="modal-close-btn" onclick="hide_contact_modal()">&times;</span>
+		<span class="modal-close-btn" onclick="toggle_contact_modal()">&times;</span>
 		<p>
 			<nobr>チームに関するお問い合わせはこちらからお願い致します。</nobr><br>
 			※返答までにお時間をいただく場合がございます。<br>
