Fix:missing newline

--- a/index.html
+++ b/index.html
@@ -397,8 +397,9 @@
 			<a href="#" class="has-img"><img src="./assets/images/logos/REVATI_LOGO_BLK_2.png" alt="logo"></a>
 			<ul>
 				<li><a href="#about" id="hd-about">ABOUT</a></li>
-				<li><a href="#topics" id="hd-topics">TOPICS</a></li>
-				<li><a href="#member" id="hd-member">MEMBER</a></li>
+				<li><a href="#news" id="hd-news">NEWS</a></li>
+				<li><a href="#team" id="hd-team">TEAM</a></li>
+				<li><a href="#store" id="hd-store">STORE</a></li>
 				<li><a href="#sponsor" id="hd-sponsor">SPONSOR</a></li>
 				<li><a href="javascript:toggle_contact_modal()" id="hd-contact">CONTACT</a></li>
 			</ul>
@@ -429,7 +430,7 @@
 						eスポーツの発展を目的として精力的に活動を行っております。
 					</p>
 				</div>
-				<a href="#topics" class="dropdown-btn">▼</a>
+				<a href="#news" class="dropdown-btn">▼</a>
 			</section>
 		</div>
 
@@ -438,9 +439,9 @@
 		</div>
 
 		<div class="container bg-default">
-			<section id="topics">
+			<section id="news">
 				<div class="section-title">
-					<h1>TOPICS</h1>
+					<h1>NEWS</h1>
 				</div>
 				<div class="section-content">
 					<ul class="topic-list">
@@ -453,7 +454,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#member" class="dropdown-btn">▼</a>
+				<a href="#team" class="dropdown-btn">▼</a>
 			</section>
 		</div>
 
@@ -462,9 +463,9 @@
 		</div>
 
 		<div class="container bg-default">
-			<section id="member">
+			<section id="team">
 				<div class="section-title">
-					<h1>MEMBERS</h1>
+					<h1>TEAM</h1>
 				</div>
 				<div class="section-content">
 					<ul class="title-list">
@@ -486,6 +487,20 @@
 						</li>
 					</ul>
 				</div>
+				<a href="#store" class="dropdown-btn">▼</a>
+			</section>
+		</div>
+
+		<div class="container">
+			<section class="empty-section"></section>
+		</div>
+
+		<div class="container bg-default">
+			<section id="store">
+				<div class="section-title">
+					<h1>STORE</h1>
+				</div>
+				<div class="section-content"></div>
 				<a href="#sponsor" class="dropdown-btn">▼</a>
 			</section>
 		</div>
