Fix:news item selections too small Improve:change news images to lazy loading Test:fix header animation delay (?)

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
 		#news li a {
 			text-decoration: none;
 			color: white;
+			display: block;
 		}
 
 		#news li img {
@@ -316,7 +317,7 @@
 			transition: .4s ease-out;
 		}
 
-		#news .middle-item img:hover {
+		#news .middle-item a:hover img {
 			transform: translateY(-8px) scale(1.01);
 			box-shadow: 0 12px 28px black;
 		}
@@ -547,26 +548,26 @@
 					<button class="arrow" id="arrow-right">&gt</button>
 					<ul>
 						<!-- <li class="left-item"><a href="./news/20221125.html">
-								<img src="./assets/images/news/20221125.png" alt="news thumbnail">
+								<img src="./assets/images/news/20221125.png" alt="news thumbnail" loading="lazy">
 								<h1>パンケーキ襲来PRE</h1>
 							</a>
 						</li> -->
 						<li class="middle-item"><a href="./news/20221125.html">
-								<img src="./assets/images/news/20221125.png" alt="news thumbnail">
+								<img src="./assets/images/news/20221125.png" alt="news thumbnail" loading="lazy">
 								<h1>パンケーキ襲来</h1>
 							</a>
 						</li>
 						<li class="right-item"><a href="./news/20221125.html">
-								<img src="./assets/images/news/20221125.png" alt="news thumbnail">
+								<img src="./assets/images/news/20221125.png" alt="news thumbnail" loading="lazy">
 								<h1>パンケーキ襲来II</h1>
 							</a>
 						</li>
 						<li class="hidden"><a href="./news/20221125.html">
-								<img src="./assets/images/news/20221125.png" alt="news thumbnail">
+								<img src="./assets/images/news/20221125.png" alt="news thumbnail" loading="lazy">
 								<h1>パンケーキ襲来III</h1>
 						</li>
 						<li class="hidden"><a href="./news/20221125.html">
-								<img src="./assets/images/news/20221125.png" alt="news thumbnail">
+								<img src="./assets/images/news/20221125.png" alt="news thumbnail" loading="lazy">
 								<h1>パンケーキ襲来IV</h1>
 							</a>
 						</li>
